--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@ body {
     grid-template-columns: repeat(10, 1fr);
 } */
 
-header li:hover{
+li:hover{
     text-decoration: underline;
 }
 
@@ -29,7 +29,7 @@ ul {
 
 #google-img {
     display: block;
-    margin: 0 auto;
+    margin: 200px auto 50px auto;
     max-height: 130px;
     width: auto;
 }
@@ -39,14 +39,16 @@ ul {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(2, auto);
+    row-gap: 2em;
 }
 
 #searchbar input{
     grid-column: 2/5;
-    height: 4em;
+    height: 1.5em;
     border-radius: 500px;
     transform: scaleX(0.6);
     border-color: lightgray;
+    font-size: 30px;
 }
 
 #searchbar input:hover {
@@ -58,10 +60,41 @@ ul {
     grid-column: 3/4;
     display: grid;
     grid-template-columns: repeat(2,1fr);
+    column-gap: 5px;
 }
 
 #buttons button {
-    padding: 0px 16px;
+    padding: 10px 16px;
+    font-size: 20px;
     line-height: 27px;
     justify-self: center;
+    border-color: rgb(238, 238, 238);
+    border-radius: 10px;
+    background-color: rgb(238, 238, 238);
+    color: gray;
+}
+
+#buttons button:hover {
+    box-shadow: 0px 0px 3px 2px lightgray;
+}
+
+footer {
+    background-color: lightgray;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    min-height: 3em; 
+}
+
+#left-foot-list {
+    margin: 20px 0px 0px 0px; /* top, right, bottom. left*/
+}
+
+/* Drawing Cirle Icon... */
+#circle-icon {
+    --max-height: max-height;
+    width: 30px;
+    height: 30px;
+    background-color: teal;
+    border-radius: 100%;
 }
